--- a/Rewrite/Js.conf
+++ b/Rewrite/Js.conf
@@ -2,23 +2,23 @@ hostname = www.zhihu.com, api.zhihu.com, link.zhihu.com, *.zhihu.com, vip1.kuwo.
 
 
 
-# 酷我音乐 SVIP (By yxiaocai)
+# 酷我音乐 SVIP 
 ^https?:\/\/vip1\.kuwo\.cn\/(vip\/v2\/user\/vip|vip\/spi/mservice) url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Kuwo.js
 
-# 傲软抠图 会员权限（By ddgksf2013）
+# 傲软抠图 会员权限
 https?:\/\/.*\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/apowersoft.js
 
 # 扫描全能王 pro
 ^https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/CamScanner.js
 
-# 彩云天气 VIP (By NobyDa)
+# 彩云天气 VIP 
 ^https:\/\/biz\.caiyunapp\.com\/v2\/user\?app_name\=weather url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/ColorWeather.js
 
 # 白描 黄金会员
 ^https?:\/\/baimiao\.uzero\.cn\/api\/v\d\.user\/appLaunchWithUser$ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/baimiao.js
 
 # 目标地图 解锁订阅
-^https?:\/\/api\.revenuecat\.com\/v1\/(receipts|subscribers\/\$RCAnonymousID%3A\w{32})$ url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/mbdt.js
+#^https?:\/\/api\.revenuecat\.com\/v1\/(receipts|subscribers\/\$RCAnonymousID%3A\w{32})$ url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/mbdt.js
 
 # 美颜相机 解锁VIP
 ^https:\/\/api\.meiyan\.com\/vip\/user_info\.json url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/myxj.js
@@ -26,13 +26,13 @@ https?:\/\/.*\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-respon
 # 最美证件照 解锁VIP
 ^https:\/\/fufei\.fengyunsoft\.cn\/api\/client\/info url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/zmzjz.js
 
-# Bilibili 1080P+ (By NobyDa)
+# Bilibili 1080P+ 
 ^https:\/\/ap(p|i)\.bilibili\.com\/((pgc\/player\/api\/playurl)|(x\/v2\/account\/myinfo\?)|(x\/v2\/account/mine\?)) url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/bilifj.js
 
-# Bilibili (By srk24)
+# Bilibili 
 ^https?:\/\/app\.bilibili\.com\/x\/v\d\/splash\/list url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/bilibili_splash.js
 
-# Document (By ddgksf2013)
+# Document 
 ^https?:\/\/license\.pdfexpert\.com\/api\/\d\.\d\/\w{9}\/\w{12}\/(state$|refresh$|check$) url script-request-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Documents.js
 
 # Fileball
@@ -41,7 +41,7 @@ https?:\/\/.*\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-respon
 # Lightroom 解锁订阅
 ^https:\/\/photos\.adobe\.io\/v2\/accounts* url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/lightroom.js
 
-# Netflix 评分 (By yichahucha)
+# Netflix 评分 
 ^https?://ios[-\w]*\.prod\.ftl\.netflix\.com/iosui/user/.+path=%5B%22videos%22%2C%\d+%22%2C%22summary%22%5D url script-request-header https://raw.githubusercontent.com/yichahucha/surge/master/nf_rating.js
 ^https?://ios[-\w]*\.prod\.ftl\.netflix\.com/iosui/user/.+path=%5B%22videos%22%2C%\d+%22%2C%22summary%22%5D url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/nf_rating.js
 
@@ -54,14 +54,14 @@ https?:\/\/.*\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-respon
 # Noted 录音笔记 解锁订阅
 ^https:\/\/subscription-api\.notedapp\.io\/api\/verifyReceipt url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/noteb.js
 
-# Pdfexpert (By langkhach270389)
+# Pdfexpert 
 ^https:\/\/license\.pdfexpert\.com\/api\/1\.0\/pdfexpert6\/subscription\/(refresh$|check$) url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Pdfexpert.js
 
 # PicsArt美易 pro
 ^https:\/\/api\.(picsart|meiease)\.c(n|om)\/users\/show\/me\.json url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/PicsArt.js
 
 # Pillow
-^https?:\/\/api\.revenuecat\.com\/v1\/(receipts|subscribers\/\$RCAnonymousID%3A\w{32})$ url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/Pillow.js
+#^https?:\/\/api\.revenuecat\.com\/v1\/(receipts|subscribers\/\$RCAnonymousID%3A\w{32})$ url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/Pillow.js
 
 # PrettyUp视频美化 解锁订阅
 ^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/PrettyUp.js
@@ -69,7 +69,7 @@ https?:\/\/.*\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-respon
 # ProKnockOut
 ^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Proknockout.js
 
-# Scanner Pro (By ddgksf2013)
+# Scanner Pro 
 ^https?:\/\/api\.revenuecat\.com\/v1\/(receipts|subscribers\/\$RCAnonymousID%3A\w{32})$ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/ScannerPro.js
 
 # Sorted
@@ -85,7 +85,7 @@ https?:\/\/.*\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-respon
 (?<=eme\/v)2(?=\/f\w{2}d\/\?.*) url 302 1
 ^https?:\/\/.*\.tiktokv\.com\/aweme\/v\d\/(feed|mix\/aweme|aweme\/post|(multi\/)?aweme\/detail|follow\/feed|nearby\/feed|search\/item|general\/search\/single|hot\/search\/video\/list|aweme\/favorite) url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/TikTok.js
 
-# TikTok (By Choler)
+# TikTok 
 #^https?:\/\/.+?\.amemv\.com\/aweme\/v\d\/(feed|aweme\/post|follow\/feed|nearby\/feed|search\/item|general\/search\/single|hot\/search\/video\/list)\/ url script-request-header https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Aweme.js
 #^https?:\/\/.+?\.amemv\.com\/aweme\/v\d\/(feed|aweme\/post|follow\/feed|nearby\/feed|search\/item|general\/search\/single|hot\/search\/video\/list)\/ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Aweme.js
 
@@ -95,20 +95,17 @@ https?:\/\/.*\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-respon
 # TestFlight 下载修正
 ^https?:\/\/testflight\.apple\.com\/v2\/accounts\/.*\/apps\/\d*/builds/\d*/install url request-body storefrontId" : ".*", request-body storefrontId" : "143441-1,29",
 
-# VSCO (By 1Blocker)
-^https?:\/\/api\.revenuecat\.com\/v\d\/subscribers\/ url script-request-header https://raw.githubusercontent.com/passat/QuanX/main/Scripts/vsco.js
-^https?:\/\/api\.revenuecat\.com\/v\d\/subscribers\/ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/vsco.js
+# VSCO 
+#^https?:\/\/api\.revenuecat\.com\/v\d\/subscribers\/ url script-request-header https://raw.githubusercontent.com/passat/QuanX/main/Scripts/vsco.js
+#^https?:\/\/api\.revenuecat\.com\/v\d\/subscribers\/ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/vsco.js
 
 # VUE Pro
-^https:\/\/api\.vuevideo\.net\/api\/v1\/(users\/.+\/profile|subtitle\/prepare) url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/VUE.js
+#^https:\/\/api\.vuevideo\.net\/api\/v1\/(users\/.+\/profile|subtitle\/prepare) url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/VUE.js
 
 # Workingcopy
 ^https:\/\/education\.github\.com\/api\/user$ url response-body "student":false response-body "student":true
 
-# WPS (By eHpo)
+# WPS 
 #^https?:\/\/ios\.wps\.cn\/ad-statistics-service url reject
 #^https?+:\/\/mobile-pic\.cache\.iciba\.com\/feeds_ad\/ url reject-200
 ^https?:\/\/[a-z-]*account\.wps\.c(n|om)(:\d+|)\/api\/users url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Wps.js
-
-
-
