--- a/Rewrite/Js.conf
+++ b/Rewrite/Js.conf
@@ -1,4 +1,4 @@
-hostname = vip1.kuwo.cn, vsco.co, *account.wps.cn, *account.wps.com, ap*.intsig.net, m*.bybutter.com, api.vuevideo.net, api.picsart.c*, api.meiease.c*, api.revenuecat.com, license.pdfexpert.com, education.github.com, biz.caiyunapp.com, *.amemv.com, aweme*.snssdk.com, buy.itunes.apple.com, notability.com, baimiao.uzero.cn, photos.adobe.io, *.aoscdn.com, api.sortedapp.com, subscription-api.notedapp.io, api.meiyan.com, fufei.fengyunsoft.cn, testflight.apple.com, pan.baidu.com, dict.youdao.com
+hostname = vip1.kuwo.cn, vsco.co, *account.wps.cn, *account.wps.com, ap*.intsig.net, m*.bybutter.com, api.vuevideo.net, api.picsart.c*, api.meiease.c*, api.revenuecat.com, license.pdfexpert.com, education.github.com, biz.caiyunapp.com, *.amemv.com, aweme*.snssdk.com, buy.itunes.apple.com, notability.com, baimiao.uzero.cn, photos.adobe.io, *.aoscdn.com, api.sortedapp.com, subscription-api.notedapp.io, api.meiyan.com, fufei.fengyunsoft.cn, testflight.apple.com, pan.baidu.com
 
 
 
@@ -28,9 +28,6 @@ https?:\/\/.*\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-respon
 
 # 最美证件照 解锁VIP
 ^https:\/\/fufei\.fengyunsoft\.cn\/api\/client\/info url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/zmzjz.js
-
-# 网易有道词典 解锁VIP
-^https:\/\/dict\.youdao\.com\/vip\/user\/status url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/wyydcd.js
 
 # Bilibili 1080P+ 
 ^https:\/\/ap(p|i)\.bilibili\.com\/((pgc\/player\/api\/playurl)|(x\/v2\/account\/myinfo\?)|(x\/v2\/account/mine\?)) url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/bilifj.js
