--- a/Rewrite/Js.conf
+++ b/Rewrite/Js.conf
@@ -48,7 +48,7 @@ https?:\/\/.*\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-respon
 ^https:\/\/subscription-api\.notedapp\.io\/api\/verifyReceipt url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/noteb.js
 
 # Pdfexpert Pro
-^https:\/\/license\.pdfexpert\.com\/api\/1\.0\/pdfexpert6\/subscription\/(refresh$|check$) url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Pdfexpert.js
+^https:\/\/license\.pdfexpert\.com\/api\/2\.0\/pdfexpert6\/subscription\/refresh url script-request-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Pdfexpert.js
 
 # PicsArt美易 Pro
 ^https:\/\/api\.(picsart|meiease)\.c(n|om)\/users\/show\/me\.json url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/PicsArt.js
