--- a/Rewrite/Js.conf
+++ b/Rewrite/Js.conf
@@ -1,4 +1,4 @@
-hostname = vip1.kuwo.cn, vsco.co, *account.wps.cn, *account.wps.com, ap*.intsig.net, m*.bybutter.com, api.vuevideo.net, api.picsart.c*, api.meiease.c*, api.revenuecat.com, license.pdfexpert.com, education.github.com, biz.caiyunapp.com, *.amemv.com, aweme*.snssdk.com, buy.itunes.apple.com, notability.com, baimiao.uzero.cn, photos.adobe.io, *.aoscdn.com, api.sortedapp.com, subscription-api.notedapp.io, api.meiyan.com, fufei.fengyunsoft.cn, testflight.apple.com, pan.baidu.com, scibug.com, iap.etm.tech, xy-viva.kakalili.com, api-chn.rthdo.com, bmall.camera360.com
+hostname = vip1.kuwo.cn, vsco.co, *account.wps.cn, *account.wps.com, ap*.intsig.net, m*.bybutter.com, api.vuevideo.net, api.picsart.c*, api.meiease.c*, api.revenuecat.com, license.pdfexpert.com, education.github.com, biz.caiyunapp.com, *.amemv.com, aweme*.snssdk.com, buy.itunes.apple.com, notability.com, baimiao.uzero.cn, photos.adobe.io, *.aoscdn.com, api.sortedapp.com, subscription-api.notedapp.io, api.meiyan.com, fufei.fengyunsoft.cn, testflight.apple.com, pan.baidu.com, scibug.com, iap.etm.tech, xy-viva.kakalili.com, api-chn.rthdo.com, bmall.camera360.com, service.ilovepdf.com
 
 
 
@@ -46,6 +46,9 @@ https?:\/\/.*\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-respon
 
 # Lightroom 解锁订阅
 ^https:\/\/photos\.adobe\.io\/v2\/accounts* url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/lightroom.js
+
+# LovePDF 解锁订阅
+https://service.ilovepdf.com/v1/user url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/lovePdf.js
 
 # MX滤镜大师 解锁订阅
 ^https?:\/\/bmall\.camera360\.com\/api\/mix\/recovery url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/MIX.js
@@ -115,6 +118,9 @@ https?:\/\/.*\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-respon
 
 # VUE Pro
 ^https:\/\/api\.vuevideo\.net\/api\/v1\/(users\/.+\/profile|subtitle\/prepare) url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/VUE.js
+
+# Widgetsmith 解锁订阅
+^https://api.revenuecat.com/v1/(receipts|subscribers)/* url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/WidgetSmith.js
 
 # Workingcopy 解锁订阅
 ^https:\/\/education\.github\.com\/api\/user$ url response-body "student":false response-body "student":true
