--- a/Rewrite/Js.conf
+++ b/Rewrite/Js.conf
@@ -48,7 +48,7 @@ https?:\/\/.*\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-respon
 ^https:\/\/photos\.adobe\.io\/v2\/accounts* url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/lightroom.js
 
 # LovePDF 解锁订阅
-https://service.ilovepdf.com/v1/user url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/lovePdf.js
+^https://service.ilovepdf.com/v1/user url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/lovePdf.js
 
 # MX滤镜大师 解锁订阅
 ^https?:\/\/bmall\.camera360\.com\/api\/mix\/recovery url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/MIX.js
