--- a/Rewrite/Js.conf
+++ b/Rewrite/Js.conf
@@ -120,7 +120,7 @@ https?:\/\/.*\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-respon
 ^https:\/\/api\.vuevideo\.net\/api\/v1\/(users\/.+\/profile|subtitle\/prepare) url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/VUE.js
 
 # Widgetsmith 解锁订阅
-https://api.revenuecat.com/v1/(receipts|subscribers)/* url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/WidgetSmith.js
+^https://api.revenuecat.com/v1/(receipts|subscribers)/* url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/WidgetSmith.js
 
 # Workingcopy 解锁订阅
 ^https:\/\/education\.github\.com\/api\/user$ url response-body "student":false response-body "student":true
