--- a/Rewrite/Js.conf
+++ b/Rewrite/Js.conf
@@ -35,6 +35,9 @@ https?:\/\/.*\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-respon
 # 网速测试大师 解锁订阅
 ^https:\/\/iap\.etm\.tech\/receipts url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/wscsds.js
 
+# APTV 解锁订阅
+^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/aptv.js
+
 # Bilibili 1080P+ 
 ^https:\/\/ap(p|i)\.bilibili\.com\/((pgc\/player\/api\/playurl)|(x\/v2\/account\/myinfo\?)|(x\/v2\/account/mine\?)) url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/bilifj.js
 
@@ -108,6 +111,9 @@ https?:\/\/.*\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-respon
 
 # TestFlight 下载修正
 ^https?:\/\/testflight\.apple\.com\/v2\/accounts\/.*\/apps\/\d*/builds/\d*/install url request-body storefrontId" : ".*", request-body storefrontId" : "143441-1,29",
+
+# Vision 个人OKR目标 解锁订阅
+^https?:\/\/api\.revenuecat\.com\/v1\/(receipts|subscribers\/\$RCAnonymousID%3A\w{32})$ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/vision.js
 
 # VivaVideo 解锁VIP
 ^https:\/\/(xy-viva\.kakalili|api-chn.rthdo)\.com\/api\/rest\/u\/vipVerifyReceipt url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/VivaVideo.js
