--- a/Rewrite/Js.conf
+++ b/Rewrite/Js.conf
@@ -71,6 +71,9 @@ https?:\/\/.*\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-respon
 # PicsArt美易 Pro
 ^https:\/\/api\.(picsart|meiease)\.c(n|om)\/users\/show\/me\.json url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/PicsArt.js
 
+# Picsew滚动截图 解锁订阅
+^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Picsew.js
+
 # Pillow 解锁订阅
 ^https?:\/\/api\.revenuecat\.com\/v1\/(receipts|subscribers\/\$RCAnonymousID%3A\w{32})$ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Pillow.js
 
