--- a/Rewrite/Js.conf
+++ b/Rewrite/Js.conf
@@ -1,4 +1,4 @@
-hostname = vip1.kuwo.cn, vsco.co, *account.wps.cn, *account.wps.com, ap*.intsig.net, m*.bybutter.com, api.vuevideo.net, api.picsart.c*, api.meiease.c*, api.revenuecat.com, license.pdfexpert.com, education.github.com, biz.caiyunapp.com, *.amemv.com, aweme*.snssdk.com, buy.itunes.apple.com, notability.com, baimiao.uzero.cn, photos.adobe.io, *.aoscdn.com, api.sortedapp.com, subscription-api.notedapp.io, api.meiyan.com, fufei.fengyunsoft.cn, testflight.apple.com, pan.baidu.com, scibug.com, iap.etm.tech, xy-viva.kakalili.com, api-chn.rthdo.com, bmall.camera360.com, service.ilovepdf.com
+hostname = vip1.kuwo.cn, vsco.co, *account.wps.cn, *account.wps.com, ap*.intsig.net, api.picsart.c*, api.meiease.c*, api.revenuecat.com, license.pdfexpert.com, education.github.com, biz.caiyunapp.com, *.amemv.com, aweme*.snssdk.com, buy.itunes.apple.com, baimiao.uzero.cn, photos.adobe.io, *.aoscdn.com, api.sortedapp.com, subscription-api.notedapp.io, api.meiyan.com, fufei.fengyunsoft.cn, testflight.apple.com, pan.baidu.com, scibug.com, iap.etm.tech, xy-viva.kakalili.com, api-chn.rthdo.com, bmall.camera360.com, service.ilovepdf.com, qianji.xxoojoke.com
 
 
 
@@ -25,6 +25,9 @@ https?:\/\/.*\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-respon
 
 # 美颜相机 解锁VIP
 ^https:\/\/api\.meiyan\.com\/vip\/user_info\.json url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/myxj.js
+
+# 钱迹 解锁VIP
+^https:\/\/qianji\.xxoojoke\.com\/vip\/configios url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/qj.js
 
 # 最美证件照 解锁VIP
 ^https:\/\/fufei\.fengyunsoft\.cn\/api\/client\/info url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/zmzjz.js
@@ -55,12 +58,6 @@ https?:\/\/.*\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-respon
 
 # MX滤镜大师 解锁订阅
 ^https?:\/\/bmall\.camera360\.com\/api\/mix\/recovery url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/MIX.js
-
-# NiChi 解锁素材
-^https?:\/\/m(p|ini-hk)\.bybutter\.com\/mood\/(official-templates|privileges) url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/NiChi.js
-
-# Notability 解锁订阅
-^https?:\/\/notability\.com\/subscriptions url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/NotabilityProCrack.js
 
 # Noted 录音笔记 解锁订阅
 ^https:\/\/subscription-api\.notedapp\.io\/api\/verifyReceipt url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/noteb.js
@@ -117,13 +114,6 @@ https?:\/\/.*\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-respon
 
 # VivaVideo 解锁VIP
 ^https:\/\/(xy-viva\.kakalili|api-chn.rthdo)\.com\/api\/rest\/u\/vipVerifyReceipt url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/VivaVideo.js
-
-# VSCO 解锁会员
-^https?:\/\/api\.revenuecat\.com\/v\d\/subscribers\/ url script-request-header https://raw.githubusercontent.com/passat/QuanX/main/Scripts/vsco.js
-^https?:\/\/api\.revenuecat\.com\/v\d\/subscribers\/ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/vsco.js
-
-# VUE Pro
-^https:\/\/api\.vuevideo\.net\/api\/v1\/(users\/.+\/profile|subtitle\/prepare) url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/VUE.js
 
 # Widgetsmith 解锁订阅
 ^https://api.revenuecat.com/v1/(receipts|subscribers)/* url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/WidgetSmith.js
